--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body{
 .ms-bg {
     background-color: #042c53;
 }
+.barcap-bg {
+    background-color: #073046;
+}
 
 .logo-img {
     display: block;
